main/default/objects/Subjectivity__c/Subjectivity__c.object-meta.xml
<CustomObject>
    <label>Subjectivity</label>
    <nameField>
        <displayFormat>Sub-{0000}</displayFormat>
        <label>Subjectivity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subjectivity</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>