main/default/objects/Subjectivity__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Bind</fullName>
                <default>true</default>
                <label>Pre-Bind</label>
            </value>
            <value>
                <fullName>Post-Bind</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>