main/default/objects/Subjectivity__c/fields/Subjectivity__c.field-meta.xml
<CustomField>
    <fullName>Subjectivity__c</fullName>
    <label>Subjectivity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>