main/default/objects/Subjectivity__c/fields/Subjectivity_Status__c.field-meta.xml
<CustomField>
    <fullName>Subjectivity_Status__c</fullName>
    <label>Subjectivity Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>