main/default/objects/Subjectivity__c/fields/Subjectivity_Template__c.field-meta.xml
<CustomField>
    <fullName>Subjectivity_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subjectivity Template</label>
    <referenceTo>Subjectivity_Template__c</referenceTo>
    <relationshipLabel>Subjectivity</relationshipLabel>
    <relationshipName>Subjectivity</relationshipName>
    <type>Lookup</type>
</CustomField>