main/default/objects/Subjectivity__c/fields/Subjectivity_Type__c.field-meta.xml
<CustomField>
    <fullName>Subjectivity_Type__c</fullName>
    <label>Subjectivity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
                <default>true</default>
                <label>General</label>
            </value>
            <value>
                <fullName>D&amp;O</fullName>
            </value>
            <value>
                <fullName>EPL</fullName>
            </value>
            <value>
                <fullName>Fiduciary</fullName>
            </value>
            <value>
                <fullName>MPL</fullName>
            </value>
            <value>
                <fullName>Crime</fullName>
            </value>
            <value>
                <fullName>Cyber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>