main/default/objects/Subjectivity__c/recordTypes/Aqueous_Subjectivity.recordType-meta.xml
<RecordType>
    <fullName>Aqueous_Subjectivity</fullName>
    <active>true</active>
    <label>Aqueous Subjectivity</label>
</RecordType>