main/default/objects/Subjectivity__c/recordTypes/Celerity_Subjectivity.recordType-meta.xml
<RecordType>
    <fullName>Celerity_Subjectivity</fullName>
    <active>true</active>
    <label>Celerity Subjectivity</label>
</RecordType>